<resources>
    <string name="app_name">Taskie Counter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menutitle_showDurations">Durations Report</string>
    <string name="menutitle_settings">Settings</string>
    <string name="menutitle_showAbout">About Task Timer</string>
    <string name="menutitle_generate">Generate Data</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit our task details</string>
    <string name="delete_button_description">Button to delete a task</string>
    <string name="add_Task_name">Task Name:(Required)</string>
    <string name="add_Task_description">Task Description:(Optional)</string>
    <string name="add_Task_SortOrder">Order: sorts Low to High</string>
    <string name="addedit_save_text">Save</string>
    <string name="instructions_headings">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.

Tasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.

Tapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).

Each task has Edit and Delete buttons if you want to change the details or remove the task.</string>

    <string name="addedit_name_hint">Task name: required</string>
    <string name="addedit_description_hint">Task description (optional)</string>
    <string name="addedit_sort_hint">Order: sorts low to high</string>


    <string name="instructions_heading">Instructions</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes.  Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Abandon changes</string>
    <string name="cancelEditDiag_negative_caption">Continue editing</string>
    <string name="about_copyright">Copyright \u00a9 2022 Auro Saswat Raj</string>
<!--    TODO: Change the URL-->
    <string name="about_weblink_v21">Instructions available at www.learnprogramming.academy</string>
    <string name="about_weblink">Instructions available at</string>
    <string name="about_url"><u>"https://www.learnprogramming.academy"</u></string>
    <string name="about_email">For support, email aurosaswat@gmail.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
    <string name="about_url_error">No browser application found, cannot visit world-wide web</string>


</resources>